# mashphage

./: .gitignore  README.md  mashphage  pyproject.toml  requirements.txt
db/: reference.msh  refphages.msh
mashphage/: mashphage.py
test/: AF022214.fa
tests/: test.fa.gz.sig  test_mashphage.py  tmp.fa
