[tool.poetry]
name = "mashphage"
version = "0.1.0"
description = "Rapidly assign actino-phage genome into known cluster"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dnaio = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mashphage = "mashphage.mashphage:main"